--- a/homework/day04/package.json
+++ b/homework/day04/package.json
@@ -6,7 +6,11 @@
   "type": "module",
   "dependencies": {
     "express": "^4.17.3",
+    "nodemon": "^2.0.15",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.3.0"
+  },
+  "scripts": {
+    "dev": "nodemon index.js"
   }
 }
