--- a/mini-project/backend/docker-compose.yml
+++ b/mini-project/backend/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./index.js:/myfolder/index.js
       - ./email.js:/myfolder/email.js
+      - ./cheer.js:/myfolder/cheer.js
     ports:
       - 3000:3000
 
