--- a/main-project/backend/package.json
+++ b/main-project/backend/package.json
@@ -33,6 +33,7 @@
     "@nestjs/typeorm": "^8.0.3",
     "@types/dotenv": "^8.2.0",
     "apollo-server-express": "^3.6.7",
+    "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "config": "^3.3.7",
     "dotenv": "^16.0.0",
