--- a/class/deploy-with-docker/backend/docker-compose.prod.yml
+++ b/class/deploy-with-docker/backend/docker-compose.prod.yml
@@ -13,10 +13,10 @@ services:
       - 3000:3000
 
 
-  my-database:
-    image: mysql:latest
-    environment:
-      MYSQL_DATABASE: 'mydocker03'
-      MYSQL_ROOT_PASSWORD: 'root!'
-    ports:
-      - 3306:3306
+  # my-database:
+  #   image: mysql:latest
+  #   environment:
+  #     MYSQL_DATABASE: 'mydocker03'
+  #     MYSQL_ROOT_PASSWORD: 'root!'
+  #   ports:
+  #     - 3306:3306
