--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,7 +17,7 @@ steps:
       - set
       - image
       - deployment/my-backend02
-      - my-backend-sha256-1=asia.gcr.io/back01-347705/my-backend02:1.0.8
+      - my-backend02-sha256-1=asia.gcr.io/back01-347705/my-backend02:1.0.*
     env:
       - CLOUDSDK_COMPUTE_ZONE=asia-northeast3
       - CLOUDSDK_CONTAINER_CLUSTER=autopilot-cluster-02-1
